--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
+    "@react-navigation/stack": "^7.3.2",
     "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.1",
