--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-hyperlink": "^0.0.22",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.3.0",
