--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.0.19",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-navigation": "^5.0.0"
   },
